<resources>

<!--    공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

<!--    제목-->
    <string name="app_name">Anda</string>
    <string name="title_home">홈</string>
    <string name="title_map">지도</string>
    <string name="title_compare">안과비교</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_myInfo">내정보</string>
    <string name="title_login">로그인</string>


<!--    로그인화면-->
    <string name="login_id_hint">아이디</string>
    <string name="login_pw_hint">비밀번호</string>
    <string name="login_sign_up_btn">회원가입</string>
    <string name="login_find_id_pw_btn">아이디 비밀번호 찾기</string>
    <string name="login_start_easy_btn">간편하게 시작하기  |  </string>

<!--    회원가입-->
    <string name="signup">회원가입</string>
    <string name="signup_ophtha">안과 회원가입</string>
    <string name="signup_info">가입을 통해 안다의 다양한 혜택을 함께 누려보세요!</string>
    <string name="signup_id_hint">이메일 주소</string>
    <string name="signup_email_delimiter">"@"</string>
    <string name="signup_lastId_hint">직접입력</string>
    <string name="signup_password_hint">비밀번호 입력</string>
    <string name="signup_password_confirm_hint">비밀번호 재입력</string>
    <string name="signup_nickName_hint">닉네임 입력</string>
    <string name="signup_ophtha_nickName_hint">안과이름 입력</string>
    <string name="signup_recommander_hint">추천인 아이디 입력</string>

<!--    홈화면-->
    <string name="home_do_review_btn_txt">내 리뷰 작성하기</string>

<!--    내정보-->
    <string name="my_info_title">내정보</string>
    <string name="my_info_my_ophtha">My 병원</string>
    <string name="my_info_my_point_goods">상품 리스트</string>

<!--    커뮤니티-->
    <string name="community_tb_comu_title">커뮤니티</string>
    <string name="community_tb_eye_mbti_title">시력 MBTI</string>

<!--    리뷰작성-->
    <string name="writing_review_title">후기작성</string>





</resources>